package com.jciterceros.vendas.domain.entities;

public class Administrador {
    public void atualizarProduto() {}
    public void aplicarDesconto() {}
}
